# CI-Triage-Env

./: .gitignore  .ruff.toml  Dockerfile  Dockerfile.train  README.md  ci-triage-blog-final.md  docker-entrypoint.sh  openenv.yaml  push_to_hf.sh  pyproject.toml  requirements.txt  train-entrypoint.sh  train.py
.github/workflows/: ci.yml  sync-to-hf.yml  sync_hf_space.yml
notebooks/: eval.ipynb  train_grpo.ipynb
plan/: BUDGET-LOG.md  INSTRUCTION-MANUAL.md  README-PLAN.md
plan/branch-a-env-core/: overview.md  phase-a1.md  phase-a2.md  phase-a3.md  phase-a4.md  phase-a5.md
plan/branch-b-data-pipeline/: overview.md  phase-b1.md  phase-b2.md  phase-b3.md  phase-b4.md  phase-b5.md
plan/branch-c-reward-training/: overview.md  phase-c1.md  phase-c2.md  phase-c3.md  phase-c4.md  phase-c5.md  phase-c6.md
plan/shared/: foundation-phase-0.md
tests/: test_mock_fixtures.py
tests/data/: test_clustering.py  test_dataset_loaders.py  test_generators.py  test_instantiation.py  test_mining.py
tests/env/: conftest.py  test_episode.py  test_integration.py  test_server.py  test_tools.py  test_visualizer.py
tests/fixtures/: mock_scenario.json  mock_trajectory.json
tests/rewards/: test_action_quality.py  test_anti_gaming.py  test_composite.py  test_cost_efficiency.py  test_counterfactual_predict.py  test_diagnosis.py  test_format_gate.py  test_investigation.py  test_minimal_evidence.py  test_time_penalty.py
tests/schemas/: test_action.py  test_diagnosis.py  test_episode.py  test_reward.py  test_scenario.py  test_tools.py
tests/training/: test_ablations.py  test_eval.py  (+2 more)
(+94 files in other folders)
