[project]
name = "ci_triage_env"
version = "0.1.0"
description = "OpenEnv RL environment for CI failure triage"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.7,<3.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "datasets>=2.18",
    "huggingface_hub>=0.23",
    "jsonschema>=4.21",
    "openenv>=0.1.13",
]

[project.optional-dependencies]
training = [
    "torch>=2.3",
    "transformers>=4.45",
    "trl>=0.11",
    "accelerate>=0.30",
    "wandb>=0.17",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pandas>=2.2",
]
data = [
    "openai>=1.40",
    "tenacity>=8.2",
    "tqdm>=4.66",
    "scikit-learn>=1.4",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ci_triage_env"]

[tool.uv]
package = true

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
